# ros-video-recorder

./: README.md
video_recorder/: CMakeLists.txt  README.md  package.xml  pytest.launch  setup.py
video_recorder/launch/: video_recorder.launch
video_recorder/test/: test_set_queue.py  test_video_recorder.py  test_video_recorder_import.py  test_video_recorder_node.py  test_video_recorder_service.py  test_video_subscriber.py  test_video_uploader.py  test_video_writer.py
video_recorder/video_recorder/: constants.py  set_queue.py  video_exception.py  video_recorder.py  video_recorder_node.py  video_recorder_service.py  video_subscriber.py  video_uploader.py  video_writer.py
video_recorder_msgs/: CMakeLists.txt  package.xml
video_recorder_msgs/srv/: VideoRecorderChangeSrv.srv  VideoRecorderPauseSrv.srv  VideoRecorderStartSrv.srv  VideoRecorderStopSrv.srv  VideoRecorderUnpauseSrv.srv
